--- a/src/public/index.html
+++ b/src/public/index.html
@@ -75,7 +75,7 @@ Auto
 <input type=email class="form-control bottom" id=floatingInput placeholder=name@example.com name=email>
 <label for=floatingInput>Email address</label>
 </div>
-<button class="btn btn-success w-100 py-2" type=submit>Sign in</button>
+<button class="btn btn-success w-100 py-2" type=submit>Sign up</button>
 <p class="mt-5 mb-3 text-body-secondary text-center">&copy; Made in DR! </p>
 </form>
 </main>
